second change collab2

--- a/git.html
+++ b/git.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     This is the collabarations topic and we made first change
+    thise is the second change made in collobaration
 </body>
 </html>
